# next-express

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  LICENSE  README.md  README.zh.md  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
scripts/: build.ts  bump-version.ts  question-cli.ts  release.ts  spawn-async.ts  versions.ts
src/: bin.ts  build.ts  env-logger.ts  index.ts  ts-impl-cli-ver.ts  ts-impl-cli.ts  ts-impl.ts  tsup-watch.ts
src-rust/: Cargo.toml
src-rust/src/: main.rs
src/post-install/: index.ts  post-install-downloader.ts  release-tag-name.ts
tests/: index.test.ts
tests/__custom_snapshots__/: custom-server.snap  default-server.snap
tests/__test_src__/: settings.ts
tests/__test_src__/app/manage/admin/: middlewares.ts
tests/__test_src__/app/manage/admin/site-config/: route.ts
tests/__test_src__/app/manage/admin/whitelist/: route.ts
tests/__test_src__/app/manage/public/user-public/: route.ts
tests/__test_src__/app/todos/: route.ts
tests/__test_src__/app/todos/[id]/: route.ts
tests/__test_src__/app/user/(auth)/signup/: route.ts
tests/__test_src__/app/user/(home)/avatar/: route.ts
tests/__test_src__/app/user/(home)/me/: route.ts
tests/__test_src_custom_server__/: custom-server.ts  middlewares.ts  tail-middlewares.ts
tests/__test_src_custom_server__/app/: route.ts
tests/__test_src_custom_server__/app/health/: route.ts
tests/__test_src_custom_server__/app/user/: route.ts
tests/scripts/: update-custom-snapshot.ts
tests/utils/: cli-cmds.ts  snapshots.ts
(+8 files in other folders)
