[package]
name = "nexp-compiler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
pathdiff = "0.2.3"
clap = { version = "4", features = ["derive"] }

swc_common = "14"
swc_ecma_parser = "22"
swc_ecma_ast = "14"
swc_ecma_visit = "14"
