[package]
name = "nexp-compiler-rs"
version = "0.1.7"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"
walkdir = "2"
pathdiff = "0.2.3"
swc_common = "14"
swc_ecma_parser = "22"
swc_ecma_ast = "14"
swc_ecma_visit = "14"

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.clap]
version = "4"
features = [ "derive" ]
